# KITTI-LIO-SLAM

./: .gitignore  README.md
cpp/: colcon_defaults.yaml
cpp/launch/: kitti_bag.launch.py  kitti_publisher.launch.py  launch_tf_broadcasters.py  path_camera.py
cpp/python_utils/: generate_kitti_bag.py  inspect_data.py  inspect_tracking_data.py  publish_data.py  publish_data_live.py  publish_tracking_data.py
cpp/rviz/: kitti.rviz  kitti.rviz.old
cpp/src/feature_extraction/: CMakeLists.txt  package.xml
cpp/src/feature_extraction/include/lidar/: LidarFeatureExtractionNode.h
cpp/src/feature_extraction/include/lidar/utils/: Config.h  Config.old.h
cpp/src/feature_extraction/src/: LidarFeatureExtractionNode.cpp  object_detection_node.cpp
cpp/src/gtsam_backend/include/gtsam_backend/: GraphSolver.h
cpp/src/image_projection/: CMakeLists.txt  package.xml
cpp/src/image_projection/include/image_projection/: ImageProjectionNode.h
cpp/src/image_projection/include/image_projection/utils/: Config.h
cpp/src/image_projection/src/: ImageProjectionNode.cpp  main.cpp
cpp/src/imu/: CMakeLists.txt  package.xml
cpp/src/imu/include/imu/: ImuPreintegrationNode.h  TransformFusionNode.h
cpp/src/imu/include/imu/utils/: ImuPreintegrationNodeConfig.h  TransformFusionNodeConfig.h
cpp/src/imu/src/: ImuPreintegrationNode.cpp  TransformFusionNode.cpp  main.cpp
cpp/src/map_optimization/: CMakeLists.txt  package.xml
cpp/src/map_optimization/include/map_optimization/: MapOptimizationNode.h
cpp/src/map_optimization/include/map_optimization/utils/: Config.h
cpp/src/map_optimization/src/: MapOptimizationNode.cpp  main.cpp
cpp/src/slam_msgs/: CMakeLists.txt  package.xml
cpp/src/slam_msgs/msg/: CloudInfo.msg
cpp/src/slam_srvs/: CMakeLists.txt  package.xml
cpp/src/slam_utilities/: CMakeLists.txt  package.xml
cpp/src/slam_utilities/include/slam_utilities/: State.h  map_utilities.h  utility.h
cpp/src/tracking/: CMakeLists.txt  package.xml
cpp/src/tracking/include/tracking/: TrackingNode.h
cpp/src/tracking/include/tracking/utils/: Config.h
cpp/src/tracking/src/: TrackingNode.cpp  main.cpp
python/src/tracking/: inspect_labels.py
