<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>slam_msgs</name>
    <version>0.0.0</version>
    <description>Custom ROS2 message definitions for KITTI-LIO-SLAM</description>
    <maintainer email="todo@todo.todo">maintainer</maintainer>
    <license>TODO</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <!-- rosidl_default_generators runs the Python code-generation pipeline that produces C++/Python bindings from .msg files -->
    <build_depend>rosidl_default_generators</build_depend>
    <!-- rosidl_default_runtime provides the shared libraries (.so) needed at runtime to (de)serialize the generated message types -->
    <exec_depend>rosidl_default_runtime</exec_depend>
    <!-- Declares this package as a provider of rosidl interfaces so downstream find_package() calls resolve it correctly -->
    <member_of_group>rosidl_interface_packages</member_of_group>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
